templates/jupyter-notebook_template.yaml
---
# Source: jupyter-notebook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  labels:
    app: release-name
spec:
  type: "ClusterIP"
  ports:
  - port: 8888
    name: app
  selector:
    app: release-name
---
# Source: jupyter-notebook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
  labels:
    app: release-name
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name
  template:
    metadata:
      labels:
        app: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: release-name
          image: "thesisrobot/jupyter-scipy-notebook:v0.0.1"
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: home
              mountPath: /home/jovyan
        
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: release-name
---
# Source: jupyter-notebook/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  name: release-name-oauth2-proxy
  labels:
    app: release-name
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - 
    secretName:
